--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-vector-icons": "^8.1.0",
